# wamux

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  logs.1769439157259.json
_bmad-output/: project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-14.md
_bmad-output/implementation-artifacts/: 1-1-project-initialization-monorepo-setup.md  1-2-user-authentication-profile-management.md  1-3-api-key-management-system.md  1-4-whatsapp-service-bridge-redis-streams.md  1-5-session-connection-qr-stream-sse.md  1-6-session-persistence-auto-reconnect.md  2-1-basic-text-messaging-endpoint.md  2-2-media-handling-architecture-url-based.md  5-1-public-landing-page-next-js.md  5-2-developer-documentation-mintlify.md  (+7 more)
apps/api/: .ruff.toml  Dockerfile  pyproject.toml  pytest.ini
apps/api/src/: main.py
apps/api/src/api/v1/: admin.py  auth.py  billing.py  events.py  keys.py  messages.py  payment.py  sessions.py  support.py  webhooks.py
apps/api/src/core/: __init__.py  auth.py  config.py  redis_client.py  security.py  stream_producer.py  supabase.py
apps/api/src/models/: __init__.py  api_key.py  auth.py  billing.py  commands.py  events.py  message.py  payment.py  session.py  session_settings.py  support.py  webhook.py
apps/api/src/services/: payment.py  webhook_dispatcher.py
apps/api/src/utils/: logger.py
apps/api/tests/: conftest.py  test_api_keys.py  test_auth.py  test_main.py  test_payment.py  test_redis_streams.py
scripts/: migrate_plans.py  test_redis_flow.py  verify_api_keys.sh  verify_auth.sh
(+466 files in other folders)
